removed jdk1.5 compliant code, removed unnecessary inline variable
git-svn-id: http://svn.apache.org/repos/asf/myfaces/tomahawk/trunk@504212 13f79535-47bb-0310-9956-ffa450edef68